Fix flickering issue for modals

--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Amatic+SC");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 
 body {
   margin: 0;
   overflow: hidden;
-  font-family: "Amatic SC", cursive;
+  font-family: 'Amatic SC', cursive;
 }
 
 .overlay {
@@ -31,7 +31,7 @@ body {
   color: white;
   background-color: transparent;
   font-size: 2rem;
-  font-family: "Amatic SC";
+  font-family: 'Amatic SC';
   opacity: 1;
   transition: opacity 1s;
 }
@@ -46,7 +46,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 4rem;
-  font-family: "Amatic SC";
+  font-family: 'Amatic SC';
   text-align: center;
   opacity: 0;
   transition: opacity 0.6s;
@@ -56,7 +56,7 @@ body {
 button {
   border: none;
   color: white;
-  font-family: "Amatic SC";
+  font-family: 'Amatic SC';
   font-size: 4rem;
   padding: 1rem;
   background-color: transparent;
@@ -82,19 +82,22 @@ button {
   left: 0;
   top: 0;
   width: 100%;
-  height: 0%;
+  height: 0;
+  max-height: 1400px;
   background-color: rgba(0, 0, 0, 0);
   overflow: hidden;
   opacity: 0;
 }
 .modal.visible {
-  height: 100%;
+  height: 100vh;
+  max-height: 1400px;
   overflow: auto;
   opacity: 1;
 }
 
 .modal-wrapper {
   position: relative;
+  max-height: 1400px;
   width: 50%;
   top: 50%;
   left: 50%;
@@ -103,12 +106,15 @@ button {
 }
 
 .modal-content {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgb(47 47 47 / 20%);
   backdrop-filter: blur(10px);
+  height: auto;
+  min-height: 200px;
+  max-height: 50vh;
   padding: 20px;
   border-radius: 20px;
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0 auto;
   color: white;
 }
@@ -124,7 +130,7 @@ button {
   line-height: 40px;
   text-align: center;
   border-radius: 20px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgb(47 47 47 / 20%);
   backdrop-filter: blur(10px);
   color: #fff;
   /* Set the color of the button text to white */
@@ -133,7 +139,7 @@ button {
   transition: 0.6s ease-out;
   cursor: pointer;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin-top: 20px;
 }
 
@@ -154,4 +160,16 @@ button {
 
 .modal p {
   font-weight: 300;
+}
+
+a {
+  color: white;
+  text-underline-offset: 3px;
+}
+a:visited {
+  color: rgb(143, 71, 252);
+}
+
+a:hover {
+  color: rgb(172, 123, 246);
 }
